# velib2strava

./: .gitignore  README.md  makefile  pyproject.toml
velib2strava/: main.py
velib2strava/client/: gpx_client.py  router_client.py  strava_client.py  velib_client.py
velib2strava/database/: txt_file_db.py
velib2strava/model/: run.py
velib2strava/resource/: log_config.json
